apps_v2/simple-ticker/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-ticker-svc
spec:
  type: ClusterIP
  selector:
    app: simple-ticker
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 4000
